refactored method name